--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sai's personal site👏</title>
 </head>
-<body>
+<body style="background-color: #DEF5E5;">
     <table cellspacing="30">
         <tr>
             <td><img src="IMAGE/G SAI BABU NATH.jpg" alt="G SAI BABU NATH PROFILE"></td>
